--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Porcentagem</title>
+        <title>Cálculo Porcentagem</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -98,4 +98,5 @@
         </div>
     </body>
 </html>
+
 
